# SDL_ffmpeg

./: CMakeLists.txt  FindSDL_ffmpeg.cmake  Findavcodec.cmake  Findavformat.cmake  Findavutil.cmake  Findswscale.cmake  README.md  SDL_ffmpeg.cbp  SDL_ffmpeg.sln  SDL_ffmpeg.vcproj  SDL_ffmpeg_osx.cbp  TODO  example.vcproj
doc/: CMakeLists.txt  doxygen.config  doxygen.in
examples/: CMakeLists.txt  audioplayer.c  example.c  extractaudio.c  multichannel.c  record.c
include/SDL/: SDL_ffmpeg.h
lib/: CMakeLists.txt
src/: SDL_ffmpeg.c  audioplayer.c  example.c  extractaudio.c  multichannel.c  record.c
trunk/: CMakeLists.txt  Makefile  Makefile.osx  Makefile.windows  SDL_ffmpeg.cbp  SDL_ffmpeg_osx.cbp  TODO  audio_example.html  configure  example.html  index.html
trunk/doc/: doxygen.config
trunk/include/SDL/: SDLMain.m  SDL_ffmpeg.h
trunk/lib/: CMakeLists.txt
trunk/src/: SDL_ffmpeg.c  audio_example.c  audioexample.c  audioplayer.c  example.c  extractaudio.c  multichannel.c  multichannelexample.c  record.c
